Fix middleware issues for Vite domain and add Vercel deployment config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:vite": "vite build",
     "preview:vite": "vite preview",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:vite": "vercel --prod"
   },
   "repository": {
     "type": "git",
